<resources>
    <!-- Global -->
    <string name="app_name" translatable="false">MoviePlanet</string>
    <string name="preference_file_key" translatable="false">sharedPreferences</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MoviePlanet</string>
    <string name="nav_header_subtitle">The best movie application out there!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Errors -->
    <string name="label_tv_error_no_network">No Network Available!</string>
    <string name="label_tv_error_no_results">No results found!</string>
    <string name="label_tv_error_no_lists">No List created yet!</string>
    <string name="label_tv_error_name_list_empty">Please enter a name!</string>
    <string name="label_tv_error_already_in_list">This movie is already in the list!</string>

    <!-- Good Messages -->
    <string name="label_tv_info_movie_added_to_list">Movie succesfully added to list</string>

    <!-- Main Menu -->
    <string name="label_menu_pages">Pages</string>
    <string name="label_menu_item_home">Home</string>
    <string name="label_menu_item_search">Search</string>
    <string name="label_menu_item_lists">Lists</string>

    <!-- Sorting Menu -->
    <string name="sort">Sort</string>
    <string name="sort_menu">Sort Menu</string>

    <string name="label_sort_title_asc">Title (A-Z)</string>
    <string name="label_sort_title_desc">Title (Z-A)</string>
    <string name="label_sort_popularity_asc">Popularity (ASC)</string>
    <string name="label_sort_popularity_desc">Popularity (DESC)</string>
    <string name="label_sort_rating_asc">Rating (ASC)</string>
    <string name="label_sort_rating_desc">Rating (DESC)</string>
    <string name="label_sort_release_date_desc">Release Date (DESC)</string>
    <string name="label_sort_release_date_asc">Release Date (ASC)</string>

    <!-- Filter Menu -->
    <string name="label_menu_filter">Filter Menu</string>
    <string name="label_filter_genre_action">Action</string>
    <string name="label_filter_genre_horror">Horror</string>
    <string name="label_filter_genre_comedy">Comedy</string>
    <string name="label_filter_genre_thriller">Thriller</string>
    <string name="label_filter_genre_scifi">Sci-fi</string>
    <string name="label_filter_genre_drama">Drama</string>
    <string name="label_filter_genre_romance">Romance</string>
    <string name="label_filter_genre_documentary">Documentary</string>
    <string-array name="label_filter_ratings">
        <item>All</item>
        <item>1+ Stars</item>
        <item>2+ Stars</item>
        <item>3+ Stars</item>
        <item>4+ Stars</item>
        <item>5 Stars</item>
    </string-array>
    <string-array name="label_filter_languages">
        <item>All</item>
        <item>en</item>
        <item>ja</item>
        <item>sv</item>
    </string-array>
    <string name="label_btn_action_filter_movies">Filter</string>

    <!-- MainActivity -->
    <string name="label_iv_rv_movie_description">Movie Image</string>
    <string name="label_tv_rv_movie_title">Title: </string>
    <string name="label_tv_rv_movie_genres">Genres: </string>
    <string name="label_tv_rv_movie_release_year">Release Year: </string>
    <string name="iv_rv_movie_delete_description" translatable="false">Delete Movie Button</string>
    <string name="label_btn_rv_movie_delete_description">Delete Movie Button</string>
    <string name="label_btn_load_more">Load More</string>
    <string name="label_btn_fab_description">Floating Action Button</string>
    <string name="label_toast_meals_found">Movies found!</string>

    <!-- MovieViewActivity -->
    <string name="label_iv_mv_movie_description">Movie Image</string>
    <string name="label_tv_mv_title">Title: </string>
    <string name="label_btn_mv_add_to_list">Add to List</string>
    <string name="label_tv_mv_release_date">Release Date: </string>
    <string name="label_tv_mv_genres">Genres: </string>
    <string name="label_tv_mv_original_language">Language: %1$s</string>
    <string name="label_tv_mv_overview">Overview: </string>
    <string name="label_tv_mv_popularity">Popularity: %1$.2f</string>
    <string name="label_tv_mv_vote_count">Votes: %1$d</string>
    <string name="label_tv_mv_vote_average">Average Score: %1$.1f</string>

    <string name="label_tv_mv_reviews">Reviews</string>
    <string name="label_tv_mv_review_author">Author: </string>
    <string name="label_tv_mv_review_created">Created at: %1$s</string>
    <string name="label_tv_mv_review_content">Content: </string>
    <string name="label_tv_mv_no_reviews">No Reviews Available</string>

    <!-- SearchActivity -->
    <string name="label_sv_search_hint">Search for a movie here!</string>

    <!-- ListsActivity -->
    <string name="label_tv_rv_movie_list_name">List Name:</string>
    <string name="label_btn_movie_list_delete_description">Delete List</string>

    <string name="label_tv_add_list_name">Name:</string>
    <string name="label_et_add_list_name_input">Enter the name here</string>
    <string name="label_btn_add_list">Add List</string>

    <!-- MovieListViewActivity -->
    <string name="label_tv_mlv_title">List title: %1$s</string>

</resources>