<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.pekict.movieplanet.presentation.MovieViewActivity">

    <ImageView
        android:id="@+id/iv_mv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/label_iv_mv_movie_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_mv_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/label_tv_mv_popularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mv_original_language" />

    <TextView
        android:id="@+id/tv_mv_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tv_mv_vote_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mv_popularity" />

    <TextView
        android:id="@+id/tv_mv_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tv_mv_vote_average"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mv_vote_count" />

    <TextView
        android:id="@+id/tv_mv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_tv_mv_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mv" />

    <TextView
        android:id="@+id/tv_mv_original_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tv_mv_original_language"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>