<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp">

    <ImageView
        android:id="@+id/iv_author_avatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/label_iv_rv_movie_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_review_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/label_tv_mv_review_author"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_author_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_author_avatar" />

    <TextView
        android:id="@+id/tv_review_created"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/label_tv_mv_review_created"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_author_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_author" />

    <TextView
        android:id="@+id/tv_review_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_tv_mv_review_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_author_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_created" />

</androidx.constraintlayout.widget.ConstraintLayout>